@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?><footer>
-	<websiteowner>czoyNzoiVG9lbmRhIFNvZnR3YXJlIERldmVsb3BtZW50Ijs=</websiteowner>
-	<owner_url>czoyMToiaHR0cDovL3d3dy50b2VuZGEuY29tIjs=</owner_url>
-	<copyright>czoxMToiMjAwMyAtIDIwMDciOw==</copyright>
-	<email>czoxNToiaW5mb0B0b2VuZGEuY29tIjs=</email>
+	<websiteowner>Toenda Software Development</websiteowner>
+	<owner_url>http://www.toenda.com</owner_url>
+	<copyright>2003 - 2007</copyright>
+	<email>info@toenda.com</email>
 	<show_tcmslogo>0</show_tcmslogo>
 	<show_defaultfooter>0</show_defaultfooter>
 	<show_page_loading_time>1</show_page_loading_time>
 	<legal_link_in_footer>1</legal_link_in_footer>
 	<admin_link_in_footer>1</admin_link_in_footer>
-	<footer_text>czoxOTU6IlNpdGUgaXMgcHJvdWRseSBwb3dlcmVkIGJ5IHRvZW5kYUNNUyAmYW1wOyMxNjk7IDIwMDMgLSAyMDA3IFRvZW5kYSBTb2Z0d2FyZSBEZXZlbG9wbWVudC4gQWxsIHJpZ2h0cyByZXNlcnZlZC4mbHQ7YnIgLyZndDt0b2VuZGFDTVMgaXMgRnJlZSBTb2Z0d2FyZSByZWxlYXNlZCB1bmRlciB0aGUgR05VL0dQTCBMaWNlbnNlLiZsdDticiAvJmd0OyI7</footer_text>
+	<footer_text>Site is proudly powered by toendaCMS &amp;#169; 2003 - 2007 Toenda Software Development. All rights reserved.&lt;br /&gt;toendaCMS is Free Software released under the GNU/GPL License.&lt;br /&gt;</footer_text>
 
 </footer>
