@@ -35,7 +35,7 @@ Developer Version
 	- 1.0.7 Development
 	- 1.1.0 Development
 
-Building Steps: 2385
+Building Steps: 2386
 
 
 
@@ -44,6 +44,7 @@ Building Steps: 2385
 
  - bug #0000122: login on frontpage
  - bug #0000105: cross-site scripting security bug
+ - bug #0000140: feeds with special chars
 
  - security fixed: cross-site scripting security bug
 
